<resources>
    <string name="app_name">EZ-Trip</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="phone">Phone</string>
    <string name="log_out">Log Out</string>
    <string name="yuhao_chen">Yuhao Chen</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="display_plans">Display Plans</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_details">Trip Details</string>
    <string name="dailyPlansFormatInstruction">Please follow this format for Daily Plans\nDay 1: AAA;Day 2: BBB;Day 3: CCC\n(Each day is separated by semi-colon(;))</string>
    <string name="add_plan">Add Plan</string>
    <string name="edit_the_following_trip">Edit the following trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="modify_your_profile">Modify your profile</string>
    <string name="go_back_to_the_main_activity">Go back to the main activity</string>
    <string name="submit_change">Submit Change</string>
</resources>