<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/app_name_setting"
            android:layout_width="192dp"
            android:layout_height="43dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/fauna_one"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/modify_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/modify_your_profile"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_setting" />


        <EditText
            android:id="@+id/full_name_setting"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/full_name"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modify_profile_setting" />

        <EditText
            android:id="@+id/phone_setting"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Enter Password"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_setting" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/submit_change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_setting" />

        <TextView
            android:id="@+id/setting_textview_bottom"
            android:layout_width="300dp"
            android:layout_height="18dp"
            android:text="@string/go_back_to_the_main_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>