<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/app_name_login"
            android:layout_width="192dp"
            android:layout_height="43dp"
            android:layout_marginStart="86dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="86dp"
            android:fontFamily="@font/fauna_one"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="144dp"
            android:text="@string/log_in"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_login" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/full_name"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="349dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pwd" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:autofillHints="Enter Password"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <TextView
            android:id="@+id/login_textview_bottom"
            android:layout_width="214dp"
            android:layout_height="24dp"
            android:text="@string/new_user_create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>