<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/app_name_register"
            android:layout_width="192dp"
            android:layout_height="43dp"
            android:layout_marginStart="86dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="86dp"
            android:fontFamily="@font/fauna_one"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_textview_bottom" />

        <EditText
            android:id="@+id/full_name_register"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/full_name"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_new_account" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_phone" />

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/create_new_account"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_register" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Enter Password"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_pwd1" />

        <EditText
            android:id="@+id/register_pwd1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Enter Password"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_register" />

        <TextView
            android:id="@+id/register_textview_bottom"
            android:layout_width="300dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/already_registered_login_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Email"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>